--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "jquery-migrate": "^3.0.0",
+    "normalize": "^0.3.1",
+    "normalize-css": "^2.3.1",
+    "normalize-scss": "^7.0.1",
     "object-fit-images": "^3.2.3",
     "svg4everybody": "^2.1.8"
   }
